WKFrameIsDisplayingMarkupDocument should return true for Web Archives https://bugs.webkit.org/show_bug.cgi?id=114291

Reviewed by Dean Jackson.

Also return true for the Web Archive MIME type since a Web Archive
is displaying a markup document by nature.

* UIProcess/WebFrameProxy.cpp:
(WebKit::WebFrameProxy::isDisplayingMarkupDocument):


Canonical link: https://commits.webkit.org/132699@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@148078 268f45cc-cd09-0410-ab3c-d52691b4dbfc